# VoiceAssistant

./: README.md  config.yaml  install.py  microphone_recognition.py  microphone_recognition_gpu.py  pyproject.toml  test2.py
