[tool.poetry]
name = "voice-assistant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
license = "Beer"
readme = "README.md"
packages = [{include = "voice_assistant"}]

[tool.poetry.dependencies]
python = "^3.9"
speechrecognition = "^3.10.0"
pyaudio = "^0.2.13"
numpy = "^1.25.2"
pyyaml = "^6.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
